--- a/styles/style.css
+++ b/styles/style.css
@@ -255,8 +255,8 @@ body {
     --icon-bg: var(--cyan-quarter-45);
     --icon-fg: var(--cyan-quarter-85);
 
-    --context-border-inner: rgba(255, 255, 255, 0.1); /* var(--cyan-quarter-30); */
-    --context-border-outer: rgba(0, 0, 0, 0.15); /* var(--cyan-quarter-15); */
+    --context-border-light: rgba(255, 255, 255, 0.1); /* var(--cyan-quarter-30); */
+    --context-border-dark: rgba(0, 0, 0, 0.15); /* var(--cyan-quarter-15); */
     /* 210, 25, 25 */
     --context-bg: rgba(51, 61, 63, 0.5);
 
@@ -301,8 +301,8 @@ body {
     --icon-bg: var(--cyan-quarter-75);
     --icon-fg: var(--cyan-quarter-45);
 
-    --context-border-inner: var(--cyan-quarter-95);
-    --context-border-outer: var(--cyan-quarter-75);
+    --context-border-dark: var(--cyan-quarter-95);
+    --context-border-light: var(--cyan-quarter-75);
     /* 210, 25, 70 */
     --context-bg: rgba(176, 203, 210, 0.5);
 
@@ -980,8 +980,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--context-bg);
-    box-shadow: inset 0 0 0 max(1px, 0.0625rem) var(--context-border-inner);
-    border: solid max(1px, 0.0625rem) var(--context-border-outer);
+    box-shadow: inset 0 0 0 max(1px, 0.0625rem) var(--context-border-light);
+    border: solid max(1px, 0.0625rem) var(--context-border-dark);
     backdrop-filter: blur(1.25rem);
     -webkit-backdrop-filter: blur(1.25rem);
     border-radius: 0.375rem;
@@ -997,8 +997,8 @@ body {
     width: auto;
     margin: 0 max(1px, 0.0625rem);
     padding: 0.75rem 1.125rem 0.625rem 1rem;
-    box-shadow: 0 min(-1px, -0.0625rem) 0 0 var(--context-border-inner);
-    border-top: solid max(1px, 0.0625rem) var(--context-border-outer);
+    box-shadow: 0 min(-1px, -0.0625rem) 0 0 var(--context-border-light);
+    border-top: solid max(1px, 0.0625rem) var(--context-border-dark);
     user-select: none;
 }
 
@@ -1453,8 +1453,8 @@ body {
     background: var(--context-bg);
     color: var(--text-2);
     text-align: center;
-    box-shadow: inset 0 0 0 max(1px, 0.0625rem) var(--context-border-inner);
-    border: solid max(1px, 0.0625rem) var(--context-border-outer);
+    box-shadow: inset 0 0 0 max(1px, 0.0625rem) var(--context-border-dark);
+    border: solid max(1px, 0.0625rem) var(--context-border-light);
     backdrop-filter: blur(0.75rem);
     -webkit-backdrop-filter: blur(0.75rem);
     pointer-events: none;
